force-app/main/default/objects/Rule_Archive__c/Rule_Archive__c.object-meta.xml
<CustomObject>
    <label>Rule Archive</label>
    <nameField>
        <displayFormat>RArc{000000}</displayFormat>
        <label>Rule Archive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Archive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>