force-app/main/default/objects/Rule_Archive__c/fields/Evaluation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Rule__c</fullName>
    <label>Evaluation Rule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>