force-app/main/default/objects/Rule_Archive__c/fields/Prior_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status__c</fullName>
    <description>Captures the status of the Rule prior to be archived</description>
    <label>Prior Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>