force-app/main/default/objects/Rule_Archive__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <label>Rule Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>