force-app/main/default/objects/Rule_Archive__c/fields/Rule_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Reference_Id__c</fullName>
    <label>Rule Reference Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>