force-app/main/default/objects/Rule_Archive__c/fields/Split__c.field-meta.xml
<CustomField>
    <fullName>Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split</label>
    <type>Checkbox</type>
</CustomField>