force-app/main/default/objects/Rule_Archive__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Archived&apos;</defaultValue>
    <description>Captures the Status of the Rule</description>
    <label>Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>