force-app/main/default/objects/Rule_Archive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rule_Name__c</columns>
    <columns>Version__c</columns>
    <columns>Object__c</columns>
    <columns>Order__c</columns>
    <columns>Prior_Status__c</columns>
    <columns>Status__c</columns>
    <columns>Rule_Reference_Id__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>